# GO_on__final_project

./: CMakeLists.txt  readme.md
include/: GO_on.h  common.h  game.h  menu.h
include/utils/: audio.h  display.h  input.h  linkedlist.h
src/: GO_on.c  game.c  menu.c
src/utils/: audio.c  display.c  input.c  linkedlist.c
